package ex44.base;

public class Products {
    public String name;
    public String price;
    public String quantity;

    public Products(String name, String price, String quantity) {
        this.name = name;
        this.price = price;
        this.quantity = quantity;
    }
}
