@startuml
'https://plantuml.com/class-diagram


listCreation <|-- Base44
Products <|-- Base44
StringBase44 <|-- Base44
BooleanBase44 <|-- StringBase44
Base44 <|-- StringBase44
class Base44 {
printingOutput();
}
class Products{
Name
Price
Quantity
}
class listCreation {
createList();
}
class BooleanBase44{
doesProductExist();
}
class StringBase44{
getProductName();
creatingOutput();
}
@enduml